syntax = "proto3";
package pkg.host_group.host_grouppb;

import "google/protobuf/wrappers.proto";
import "pkg/proto/utilpb/uuid.proto";
import "pkg/host/hostpb/host.proto";

option go_package = "github.com/ScoreTrak/ScoreTrak/pkg/host_group/host_grouppb";

message HostGroup {
  pkg.proto.utilpb.UUID id = 1;
  string name = 2;
  google.protobuf.BoolValue hide = 3;
  google.protobuf.BoolValue pause = 4;
  pkg.host.hostpb.Host hosts = 5;
}

message GetAllRequest{}
message GetAllResponse{
  repeated HostGroup host_groups = 1;
}

message GetByIDRequest{
  pkg.proto.utilpb.UUID id = 1;
}
message GetByIDResponse{
  HostGroup host_group = 1;
}

message DeleteRequest{
  pkg.proto.utilpb.UUID id = 1;
}

message DeleteResponse{}

message StoreRequest{
  repeated HostGroup host_groups = 1;
}

message StoreResponse{
  repeated pkg.proto.utilpb.UUID ids = 1;
}

message UpdateRequest{
  HostGroup host_group = 1;
}

message UpdateResponse{}

service HostGroupService{
  rpc GetAll(GetAllRequest) returns (GetAllResponse){}
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse){}
  rpc Delete(DeleteRequest) returns (DeleteResponse){}
  rpc Store(StoreRequest) returns (StoreResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
}