syntax="proto3";
package pkg.report.reportpb;

import "google/protobuf/wrappers.proto";
import "pkg/proto/utilpb/uuid.proto";
import "pkg/host/hostpb/host.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ScoreTrak/ScoreTrak/pkg/report/reportpb";

message Report {
  pkg.proto.utilpb.UUID id = 1;
  string cache = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message GetRequest{}
message GetResponse{
  Report reports = 1;
}

service ReportService{
  rpc Get(GetRequest) returns (GetResponse){}
}